gcc/testsuite/g++.dg/init/ctor3.C
// PR c++/14401

struct S {
  S() {} // { dg-error "" }
  const int i;
};
